Made ingredient list

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,8 +7,23 @@
     <title>Fancy Ramen</title>
 </head>
 <body>
-    <img src="../img/image.jpeg">
-    <h1>Fancy Ramen with veggies</h1>
-    <p>If you have instant ramen at home but want to take it to the next level. Use this recipe to dress up instant ramen noodles. Elevated with more seasoning and veggies such as mushrooms, carrots, and onion it will take a cup of depression to a nice home meal.</p>
+  <img src="../img/image.jpeg">
+  <h1>Fancy Ramen with veggies</h1>
+  <p>If you have instant ramen at home but want to take it to the next level. Use this recipe to dress up instant ramen noodles. Elevated with more seasoning and veggies such as mushrooms, carrots, and onion it will take a cup of depression to a nice home meal.</p>
+  <ul>
+    <li>4 cups water</li>
+    <li>8 ounces sliced fresh mushrooms</li>
+    <li>1 bunch green onions</li>
+    <li>1 large carrot</li>
+    <li>1/2 yellow onion</li>
+    <li>2 tablespoons soy sauce</li>
+    <li>2 tablespoons minced garlic</li>
+    <li>1 tablespoon siracha</li>
+    <li>1 teaspoon sesame oil</li>
+    <li>1 teaspoon rice wine vinegar</li>
+    <li>1/2 teaspoon ground white pepper</li>
+    <li>1/2 teaspoon cracked black pepper</li>
+    <li>2 (3 ounce) packages chicken-flavored ramen noodles</li>
+  </ul>
 </body>
 </html>
