--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -25,5 +25,11 @@
     <li>1/2 teaspoon cracked black pepper</li>
     <li>2 (3 ounce) packages chicken-flavored ramen noodles</li>
   </ul>
+  <ol>
+    <li>Combine water, mushrooms, 1/2 the green onions, carrot, onion, soy sauce, garlic, sriracha sauce, sesame oil, rice wine vinegar, white pepper, black pepper, and flavor packets from ramen in a large pot. Bring to a boil. Add noodles and cook, stirring occasionally, until noodles are tender yet firm to the bite, about 5 minutes.</li>
+      
+    <li>Reduce heat to a simmer and cook until vegetables are tender, about 10 minutes. Serve topped with remaining green onions.</li>
+  </ol>
 </body>
+
 </html>
