Made headings for the descripton, ingredients, and steps for recipe.

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,7 +9,9 @@
 <body>
   <img src="../img/image.jpeg">
   <h1>Fancy Ramen with veggies</h1>
+  <h2>Description</h2>
   <p>If you have instant ramen at home but want to take it to the next level. Use this recipe to dress up instant ramen noodles. Elevated with more seasoning and veggies such as mushrooms, carrots, and onion it will take a cup of depression to a nice home meal.</p>
+  <h3>Ingredients</h3>
   <ul>
     <li>4 cups water</li>
     <li>8 ounces sliced fresh mushrooms</li>
@@ -25,6 +27,7 @@
     <li>1/2 teaspoon cracked black pepper</li>
     <li>2 (3 ounce) packages chicken-flavored ramen noodles</li>
   </ul>
+  <h3>Steps</h3>
   <ol>
     <li>Combine water, mushrooms, 1/2 the green onions, carrot, onion, soy sauce, garlic, sriracha sauce, sesame oil, rice wine vinegar, white pepper, black pepper, and flavor packets from ramen in a large pot. Bring to a boil. Add noodles and cook, stirring occasionally, until noodles are tender yet firm to the bite, about 5 minutes.</li>
       
