linked homepage to stir fry page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Odin Recipes</h1>    
     
     <a href="recipes/ramen.html">Ramen</a>
+    <a href="recipes/stir-fry.html">Stir Fry</a>
   </body>
   
 
