--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -7,6 +7,7 @@
     <title>Stir Fry</title>
 </head>
 <body>
-  <img src=../img/stir-fry.jpeg>  
+  <img src=../img/stir-fry.jpeg> 
+  <h1>Spicy Peanut Chicken Stir-Fry</h1> 
 </body>
 </html>
