made description header and paragraph

--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -9,5 +9,7 @@
 <body>
   <img src=../img/stir-fry.jpeg> 
   <h1>Spicy Peanut Chicken Stir-Fry</h1> 
+  <h2>Description</h2>
+  <p>This is a peanutty stir-fry. Serve over rice. If you want more sauce than this recipe makes, do not double the vinegar.</p>
 </body>
 </html>
