--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -11,5 +11,22 @@
   <h1>Spicy Peanut Chicken Stir-Fry</h1> 
   <h2>Description</h2>
   <p>This is a peanutty stir-fry. Serve over rice. If you want more sauce than this recipe makes, do not double the vinegar.</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <h4>Sauce</h4>
+    <li>1/4 cup chicken broth</li>
+    <li>2 tablespoons soy sauce</li>
+    <li>1 tablespoon cornstarch</li>
+    <li>1 tablespoon white sugar</li>
+    <li>1 tablespoon white vinegar</li>
+    <li>1 teaspoon cayenne pepper</li>
+    <h4>Stir-fry</h4>
+    <li>1 tablespoon vegetable oil</li>
+    <li>1 pound skinless,boneless chicken thighs, cut into 3/4 inch pieces</li>
+    <li>1 clove garlic</li>
+    <li>1 red bell pepper</li>
+    <li>1/3 cup dry roasted peanuts</li>
+    <li>2 green onions</li>
+  </ul>
 </body>
 </html>
