--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -28,5 +28,11 @@
     <li>1/3 cup dry roasted peanuts</li>
     <li>2 green onions</li>
   </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Mix chicken broth, soy sauce, cornstarch, sugar, vinegar, and cayenne pepper together in a bowl until sauce is smooth.</li>
+    <li>Heat oil in a wok or large skillet over medium-high heat; saute chicken and garlic until chicken is no longer pink in the center, 5 to 10 minutes. Add red bell pepper and saute until slightly tender, about 1 minute.</li>
+    <li>Stir sauce into chicken chicken mixture and cook until thickened, about 1 minute. Stir peanuts into chicken mixture and garnish with green onions.</li>
+  </ol>
 </body>
 </html>
