linked mainpage to seared tuna page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <a href="recipes/ramen.html">Ramen</a>
     <a href="recipes/stir-fry.html">Stir Fry</a>
+    <a href="recipes/seared-tuna.html">Sesame Seared Tuna</a>
   </body>
   
 
