made description of recipe with header

--- a/recipes/seared-tuna.html
+++ b/recipes/seared-tuna.html
@@ -9,5 +9,7 @@
 <body>
   <img src="../img/tuna.jpeg">
   <h1>Sesame Seared Tuna</h1>
+  <h2>Description</h2>
+  <p>Easy, great tasting tuna coated with sesame seeds, and quickly seared. This tuna is served rare, so be sure to use a good quality fresh tuna</p>
 </body>
 </html>
