--- a/recipes/seared-tuna.html
+++ b/recipes/seared-tuna.html
@@ -11,5 +11,17 @@
   <h1>Sesame Seared Tuna</h1>
   <h2>Description</h2>
   <p>Easy, great tasting tuna coated with sesame seeds, and quickly seared. This tuna is served rare, so be sure to use a good quality fresh tuna</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>1/4 cup soy sauce</li>
+    <li>1 tablespoon mirin</li>
+    <li>1 tablespoon honey</li>
+    <li>2 tablespoons sesame oil</li>
+    <li>1 tablespoon rice wine vinegar</li>
+    <li>4 (6 ounce) tuna steaks</li>
+    <li>1/2 cup sesame seeds</li>
+    <li>wasabi paste</li>
+    <li>1 tablespoon sesame oil</li>
+  </ul>
 </body>
 </html>
