--- a/recipes/seared-tuna.html
+++ b/recipes/seared-tuna.html
@@ -23,5 +23,11 @@
     <li>wasabi paste</li>
     <li>1 tablespoon sesame oil</li>
   </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>In a small bowl, stir together the soy sauce, mirin, honey and sesame oil. Divide into two equal parts. Stir the rice vinegar into one part and set aside as a dipping sauce.</li>
+    <li>Spread the sesame seeds out on a plate. Coat the tuna steaks with the remaining soy sauce mixture, then press into the sesame seeds to coat.</li>
+    <li>Heat olive oil in a cast iron skillet over high heat until very hot. Place steaks in the pan, and sear for about 30 seconds on each side. Serve with the dipping sauce and wasabi paste.</li>
+  </ol>
 </body>
 </html>
