--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <title>  </title> </head>
   <body> 
     <h1>Odin Recipes</h1>    
-    
-    <a href="recipes/ramen.html">Ramen</a>
-    <a href="recipes/stir-fry.html">Stir Fry</a>
-    <a href="recipes/seared-tuna.html">Sesame Seared Tuna</a>
+    <ul>
+      <li> <a href="recipes/ramen.html">Ramen</a> </li> 
+      <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
+      <li><a href="recipes/seared-tuna.html">Sesame Seared Tuna</a> </li>
+    </ul>
   </body>
   
 
