added photo to homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head> <meta charset="UTF-8">
   <title>  </title> </head>
   <body> 
+    <img src="img/kitchen.jpg">
     <h1>Odin Recipes</h1>    
     <ul>
       <li> <a href="recipes/ramen.html">Ramen</a> </li> 
