--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head> <meta charset="UTF-8">
-  <title>  </title> </head>
+  <title>  </title> 
+  <link rel="stylesheet" href="styles.css">
+</head>
   <body> 
     <img src="img/kitchen.jpg">
     <h1>Odin Recipes</h1>    
