--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
   <body> 
     <img src="img/kitchen.jpg">
-    <h1>Odin Recipes</h1>    
+    <h1 class="box">Odin Recipes</h1>    
     <ul>
       <li> <a href="recipes/ramen.html">Ramen</a> </li> 
       <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
@@ -16,4 +16,3 @@
   
 
 
-</html>
