added global reset for margin and padding

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head> <meta charset="UTF-8">
-  <title>  </title> 
+
+<head>
+  <meta charset="UTF-8">
+  <title> </title>
   <link rel="stylesheet" href="styles.css">
 </head>
-  <body> 
-    <img src="img/kitchen.jpg">
-    <h1 class="box">Odin Recipes</h1>    
-    <ul>
-      <li> <a href="recipes/ramen.html">Ramen</a> </li> 
-      <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
-      <li><a href="recipes/seared-tuna.html">Sesame Seared Tuna</a> </li>
-    </ul>
-  </body>
-  
 
-
+<body>
+  <img src="img/kitchen.jpg" class="homepage-picture">
+  <h1 class="box">Odin Recipes</h1>
+  <ul>
+    <li> <a href="recipes/ramen.html">Ramen</a> </li>
+    <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
+    <li><a href="recipes/seared-tuna.html">Sesame Seared Tuna</a> </li>
+  </ul>
+</body>
