--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <img src="img/kitchen.jpg" class="homepage-picture">
-  <h1 class="Title">Odin Recipes</h1>
+  <h1 class="title">Odin Recipes</h1>
   <ul>
     <li> <a href="recipes/ramen.html">Ramen</a> </li>
     <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
