--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <img src="img/kitchen.jpg" class="homepage-picture">
   <h1 class="title">Odin Recipes</h1>
-  <ul>
-    <li> <a href="recipes/ramen.html">Ramen</a> </li>
-    <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
-    <li><a href="recipes/seared-tuna.html">Sesame Seared Tuna</a> </li>
-  </ul>
+  <nav>
+    <ul>
+      <li> <a href="recipes/ramen.html">Ramen</a> </li>
+      <li><a href="recipes/stir-fry.html">Stir Fry</a> </li>
+      <li><a href="recipes/seared-tuna.html">Sesame Seared Tuna</a> </li>
+    </ul>
+  </nav>
 </body>
